--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cooked",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://kyleghousel.github.io/cooked/",
+  "homepage": "https://kyleghousel.github.io/cooked",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
